--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - 8443:8443
 
   nats1:
-    image: nats:alpine
+    image: docker.io/nats:alpine
     ports:
       - 4222:4222
       - 8222:8222
@@ -22,7 +22,7 @@ services:
       - nats1-data:/data
 
   nats2:
-    image: nats:alpine
+    image: docker.io/nats:alpine
     ports:
       - 4223:4222
       - 8223:8222
@@ -32,7 +32,7 @@ services:
       - nats2-data:/data
 
   nats3:
-    image: nats:alpine
+    image: docker.io/nats:alpine
     ports:
       - 4224:4222
       - 8224:8222
