Use secrets in test CI

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,5 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Test bootstraph.sh
+        env:
+          SYNADIA_CR_USERNAME: ${{ secrets.SYNADIA_CR_USERNAME }}
+          SYNADIA_CR_PASSWORD: ${{ secrets.SYNADIA_CR_PASSWORD }}
         run: |
           bash <(curl --location https://raw.githubusercontent.com/synadia-io/platform-trial/refs/heads/update-trial/scripts/bootstrap.sh)
