Give shell script execute permission

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,4 +17,5 @@ jobs:
         shell: bash
         run: |
           curl -fsSL https://raw.githubusercontent.com/synadia-io/platform-trial/refs/heads/update-trial/scripts/bootstrap.sh -o bootstrap.sh
+          chmod +x ./bootstrap.sh
           ./bootstrap.sh --debug
