--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,4 +18,4 @@ jobs:
         run: |
           curl -fsSL https://raw.githubusercontent.com/synadia-io/platform-trial/refs/heads/update-trial/scripts/bootstrap.sh -o bootstrap.sh
           chmod +x ./bootstrap.sh
-          ./bootstrap.sh --debug
+          ./bootstrap.sh
