--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,11 @@ jobs:
         if: failure()
         run: |
           cd ./platform-trial
+          echo '.env:'
           cat .env
+          echo '\nshared.conf:'
           cat shared.conf
+          echo '\ntrial.creds:'
           cat trial.creds
+          echo '\nhttp-gateway.creds:'
           cat http-gateway.creds
